--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,30 @@
 
 //  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+ $gray-medium-light: #EAEAEA;
+
+ footer {
+     font-size: 1.2rem;
+     margin-top: 45px;
+     padding-top: 5px;
+     border-top: 1px solid $gray-medium-light;
+     color:lightgray;
+     a {
+         color: gray;
+         &:hover {
+             color: darkgray;
+         }
+     }
+     small {
+         float: left;
+     }
+     ul  {
+         float: right;
+         list-style: none;
+         li {
+             float: left;
+             margin-left: 15px;
+         }
+     }
+ }
