static_pages 'index', 'about' and 'contact'

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,9 @@
-<h1> Hello World ROR ! <h1>
-
-<%= @name %>
+<div class="jumbotron">
+    <h1> MeetingApp <h1>
+        <p>
+            Gerencie salas de reuniões de qualquer lugar!
+        </p>
+        <p>
+            <%= link_to "Crie sua conta", "#", class: "btn btn-primary btn-lg" %>
+        </p>
+</div>
