--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,28 +1,22 @@
-<nav class="navbar navbar-inverse navbar-static-top">
-
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar- toggle collapsed" data-toggle="collapsed">
-                <span class="sr-only"> Toggle navigation </span>
-                <span class="icon-bar"/>
-                <span class="icon-bar"/>
-                <span class="icon-bar"/>
-            </button>
-            <%= link_to 'Contact List', root_url, class: 'navbar-brand' %>
-        </div>
-
-        <div class="collapse navbar-collapse" id="expanded-menu">
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    <a href="#"> Nova Conta </a>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <%= link_to 'Entrar', '#' %>
-                </li>
-            </ul>
-        </div>
-
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">MeetingApp</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#textoNavbar" aria-controls="textoNavbar" aria-expanded="false" aria-label="Alterna navegação">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="textoNavbar">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="./">Home <span class="sr-only">(Página atual)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./about"> Sobre </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./contact"> Contato </a>
+      </li>
+    </ul>
+    <span class="navbar-text">
+      <a class="nav-link" href="#"> Login
+    </span>
+  </div>
 </nav>
