init  user model

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,7 @@
-<h1> Sobre </h1>
+<div class="jumbotron">
 
-<p>
-    Estudante do curso de Ciência da computação na PUC-Minas Poços de Caldas.
-</p>
+  <h1 class="display-4">Sobre</h1>
+  <hr class="my-4">
+  <p class="lead">Estudante do curso de Ciência da computação na PUC-Minas Poços de Caldas.</p>
+
+</div>
