--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,10 +1,8 @@
-<h1> Contato </h1>
+<div class="jumbotron">
 
-<ul>
-    <li>
-        <p> Perfil no  <a href="https://github.com/YuryRegis/"> GitHub </a>. </p>
-    </li>
-    <li>
-        <p> Perfil no  <a href="https://www.linkedin.com/in/yuryregis/"> Linkedin </a>. </p>
-    </li>
-</ul>
+    <h1 class="display-4">Contato</h1>
+    <hr class="my-4">
+    <p class="lead"> Perfil no  <a href="https://github.com/YuryRegis/"> GitHub </a>. </p>
+    <p class="lead"> Perfil no  <a href="https://www.linkedin.com/in/yuryregis/"> Linkedin </a>. </p>
+
+</div>
