--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,9 +1,8 @@
 <div class="jumbotron">
-    <h1> MeetingApp <h1>
-        <p>
-            Gerencie salas de reuniões de qualquer lugar!
-        </p>
-        <p>
-            <%= link_to "Crie sua conta", "#", class: "btn btn-primary btn-lg" %>
-        </p>
+
+  <h1 class="display-4">MeetingApp</h1>
+  <hr class="my-4">
+  <p class="lead">Gerencie salas de reuniões de qualquer lugar!</p>
+  <a class="btn btn-primary btn-lg" href="#" role="button">Crie sua conta</a>
+
 </div>
