--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,17 +6,17 @@
   <div class="collapse navbar-collapse" id="textoNavbar">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href='./'>Home <span class="sr-only">(Página atual)</span></a>
+        <a class="nav-link" href='/'>Home <span class="sr-only">(Página atual)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href='./about'> Sobre </a>
+        <a class="nav-link" href='/about'> Sobre </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href='./contact'> Contato </a>
+        <a class="nav-link" href='/contact'> Contato </a>
       </li>
     </ul>
     <span class="navbar-text">
-      <a class="nav-link" href="#"> Login
+      <a class="nav-link" href="#"> Login </a>
     </span>
   </div>
 </nav>
