apply new_users link to button

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -4,6 +4,6 @@
             Gerencie salas de reuniões de qualquer lugar!
         </p>
         <p>
-            <%= link_to "Crie sua conta", "#", class: "btn btn-primary btn-lg" %>
+            <%= link_to "Crie sua conta", "/users/new", class: "btn btn-primary btn-lg" %>
         </p>
 </div>
