--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -22,7 +22,7 @@
         <td><%= schedule.is_available %></td>
         <td><%= link_to 'Show', schedule %></td>
         <td><%= link_to 'Edit', edit_schedule_path(schedule) %></td>
-        <td><%= link_to 'Destroy', schedule, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', schedule, method: :delete, data: { confirm: 'Deseja excluir?' } %></td>
       </tr>
     <% end %>
   </tbody>
